Se agrega el Proyecto

--- a/cifrado.html
+++ b/cifrado.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="witdth=device-witdht, initial-scale=1.0">
     <title>Cifrado César</title>
     <link href="style.css" rel="stylesheet" />
+    <script src="index.js"></script>
    </head>
   <body>
    <header>
-  <h1>Bienvenidos al juego de Cifrado César</h1>
+  <h1>HOLA TE INVITO<br> A CONOCER UN MÉTODO<br> LLAMADO CIFRADO CÉSAR</h1>
    </header>
-   <p>ESTE JUEGO CONSISTE EN CIFRAR<br>Y DESCIFRAR PALABRAS MEDIANTE<br>EL MÉTODO DEL ROMANO CÉSAR</p>
-   <h3><button><a href="index.html">EMPECEMOS</a></button>
+   <p>CON ESTE MÉTODO<br>PODEMOS CREAR<br>CLAVES SECRETAS,<br>ESTABLECER UNA COMUNICACIÓN<br>PRIVADA, MEDIANTE LETRAS.<br>ANÍMATE A CONOCER<br>COMO FUNCIONA.</p>
+   <h3><button><a href="index.html">DESCUBRIR</a></button>
    </h3>
   </body>
 </html>
