--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="witdth=device-witdht, initial-scale=1.0">
     <title>Cifrado Cesar</title>
     <link href="style.css" rel="stylesheet" />
+    <script src="index.js"></script>
   </head>
   <body>
        <main>
